--- a/MichaelHeenanBlog/MichaelHeenanBlog.csproj
+++ b/MichaelHeenanBlog/MichaelHeenanBlog.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer" Version="2.7.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="Slugify.Core" Version="2.3.0" />
     <PackageReference Include="StackifyMiddleware" Version="3.0.4.2" />
   </ItemGroup>
 
