--- a/MichaelHeenanBlog/MichaelHeenanBlog.csproj
+++ b/MichaelHeenanBlog/MichaelHeenanBlog.csproj
@@ -19,6 +19,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="4.1.0-dev-00166" />
     <PackageReference Include="Slugify.Core" Version="2.3.0" />
     <PackageReference Include="StackifyMiddleware" Version="3.0.4.2" />
   </ItemGroup>
