--- a/MichaelHeenanBlog/MichaelHeenanBlog.csproj
+++ b/MichaelHeenanBlog/MichaelHeenanBlog.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt-Official" Version="0.1.109" />
     <PackageReference Include="Humanizer" Version="2.7.9" />
+    <PackageReference Include="Markdig" Version="0.17.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
