Add Ability to comment on a post. Add App setting values

--- a/MichaelHeenanBlog/appsettings.json
+++ b/MichaelHeenanBlog/appsettings.json
@@ -1,11 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Information"
+    },
+    "Seq": {
+      "Url": "https://localhost:5341",
+      "ApiKey": ""
     }
   },
-  "AllowedHosts": "*",
-  
+
+  "Environment": "Localhost",
+
+  "Component":  "blog",
+
+  "AllowedHosts": "*"
+
 }
