Add delete comment button

--- a/MichaelHeenanBlog/appsettings.json
+++ b/MichaelHeenanBlog/appsettings.json
@@ -1,13 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Debug"
     },
     "Seq": {
-      "Url": "https://localhost:5341",
+      "Url": "http://localhost:5341",
       "ApiKey": ""
     }
   },
+
 
   "Environment": "Localhost",
 
