--- a/MichaelHeenanBlog/MichaelHeenanBlog.csproj
+++ b/MichaelHeenanBlog/MichaelHeenanBlog.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.1.0-dev-00166" />
     <PackageReference Include="Slugify.Core" Version="2.3.0" />
+    <PackageReference Include="Sparc.TagCloud" Version="0.0.1" />
     <PackageReference Include="StackifyMiddleware" Version="3.0.4.2" />
   </ItemGroup>
 
